# ChangeLog for media-libs/smpeg
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/smpeg/ChangeLog,v 1.56 2007/08/25 03:04:15 josejx Exp $

  25 Aug 2007; Joseph Jezak <josejx@gentoo.org> smpeg-0.4.4-r9.ebuild:
  Marked ppc64 stable for bug #189359.

  24 Aug 2007; Tobias Scherbaum <dertobi123@gentoo.org>
  smpeg-0.4.4-r9.ebuild:
  ppc stable, bug #189359

  24 Aug 2007; Raúl Porcel <armin76@gentoo.org> smpeg-0.4.4-r9.ebuild:
  alpha/ia64 stable wrt #189359

  23 Aug 2007; Joshua Kinard <kumba@gentoo.org> smpeg-0.4.4-r9.ebuild:
  Stable on mips, per #189359.

  21 Aug 2007; Gustavo Zacarias <gustavoz@gentoo.org> smpeg-0.4.4-r9.ebuild:
  Stable on sparc wrt #189359

  21 Aug 2007; Markus Ullmann <jokey@gentoo.org> smpeg-0.4.4-r9.ebuild:
  Stable on x86 wrt bug #189359

  21 Aug 2007; Jeroen Roovers <jer@gentoo.org> smpeg-0.4.4-r9.ebuild:
  Stable for HPPA (bug #189359).

  19 Aug 2007; Christoph Mende <angelos@gentoo.org> smpeg-0.4.4-r9.ebuild:
  Stable on amd64 wrt bug #189359

*smpeg-0.4.4-r9 (02 Feb 2007)

  02 Feb 2007; Michael Sterrett <mr_bones_@gentoo.org>
  -smpeg-0.4.4-r6.ebuild, -smpeg-0.4.4-r7.ebuild, +smpeg-0.4.4-r9.ebuild:
  stop installing the gtk1 player (bug 161077)

  09 Jan 2007; Michael Sterrett <mr_bones_@gentoo.org>
  +files/smpeg-0.4.4-missing-init.patch, smpeg-0.4.4-r8.ebuild:
  Add patch for corner case of bad file open.  From Vincent via bug #160795

  15 Oct 2006; Olivier Crête <tester@gentoo.org> smpeg-0.4.4-r8.ebuild:
  Stable on amd64 per bug #150341

  15 Oct 2006; Tobias Scherbaum <dertobi123@gentoo.org>
  smpeg-0.4.4-r8.ebuild:
  hppa stable, bug #150341

  14 Oct 2006; Aron Griffis <agriffis@gentoo.org> smpeg-0.4.4-r8.ebuild:
  Mark 0.4.4-r8 stable on alpha

  10 Oct 2006; Gustavo Zacarias <gustavoz@gentoo.org> smpeg-0.4.4-r8.ebuild:
  Stable on sparc wrt #150341

  07 Oct 2006; Joseph Jezak <josejx@gentoo.org> smpeg-0.4.4-r8.ebuild: