@@ -1,3 +1,6 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 AUX smpeg-0.4.4-PIC.patch 9472 RMD160 c0ee00ca02c1ed2f5ce1890065864175f6cb8eb1 SHA1 ca210893cfd50554730918e572dc6d48192aa3f4 SHA256 a9fd3b892e06a00e31fedf719df0ff2bccac0542da9d1008d90712086ccc310f
 AUX smpeg-0.4.4-automake.patch 320 RMD160 702a601b3dfc925b29d5c11926af56d6c9fa2578 SHA1 1c97efec70a88db7fe5498eab1f408fe203a758c SHA256 2d6d8fbc92e9f040d56ae597282385b5bd68d308931228dfe3a1a453b6c18eda
 AUX smpeg-0.4.4-config.patch 472 RMD160 4f4d726cfb127b5fa1de977f205e20ed14ef5947 SHA1 88a099bfa49f65e4c0006d7c8e2acfeb16f414f8 SHA256 e64c070d1e69900c76515bd79130473847a407bab14990862aeb2b84ac58848a
@@ -10,6 +13,13 @@ AUX smpeg-0.4.4-missing-init.patch 266 RMD160 1f53a986425b9b5aeaf1cd8e6e5e5d273e
 AUX smpeg-0.4.4-mmx.patch 352 RMD160 b0be5ec35a0b3bfce513285bc346b70b1989e4a8 SHA1 23c5a0cb58952998fc8507406459703de742aac2 SHA256 2dbcce8253b16b8882e491787d28a3410eb8e0ec29a300fed258bd899ac24248
 DIST smpeg-0.4.4-gtkm4.patch.bz2 3894 RMD160 fbef70da1b1a9f5d482c9506286c9f8e7ce764d8 SHA1 d899fc56c4f67459e8bb01a8313955804b821b45 SHA256 85c1c2126bd0e405092f3f08caace3503997fd0447989fdd175c7f39c3f6091b
 DIST smpeg-0.4.4.tar.gz 315054 RMD160 d55249ad53417fa0df3d925aed0e83d2204e28b7 SHA1 6d7f4449472e6270ab435b2224f3fad951c35259 SHA256 1efa7984d0aada0c2954cd0aaef357e9d7871dadd3368dbe742ab5f260523e57
-EBUILD smpeg-0.4.4-r9.ebuild 1810 RMD160 0e97292ff331723e92790ae241c705b0c068a143 SHA1 ae673d992b32422b68fbbdb3a4bb8936c6a0cf68 SHA256 e276587853336332be20d0d58004d136dc475c65b08a2603dbfa109bff95c78a
-MISC ChangeLog 7697 RMD160 9ef6aa214bf8fa1f308f552103012c46980c2535 SHA1 b636d1c3984685bf7e3d3642511fe25add571c07 SHA256 aeaa237929e47caa5b175575d766fca29d27a8723f4c6eb087a680ac3f60a1f7
+EBUILD smpeg-0.4.4-r9.ebuild 1841 RMD160 f032a603e6775645a322bb202f6306abe05f2623 SHA1 449894d0ccf70ad122d31c4fd6188a73b6fc730e SHA256 c71ed19bf82524e7827f99769067331d527c95ca7288e11b9ed2e5c12febbf41
+MISC ChangeLog 7918 RMD160 67c136fbfd25781a42ef208ad682ac7654d71c3c SHA1 3a07ca1d094dd6a9f8991c7f76a2453d6a737267 SHA256 53dff2172a2f5f389bcba91d1d8a5c397e0831b604093fcac24282bd096da5ae
 MISC metadata.xml 158 RMD160 cbd9984bb6b426c8c9cee5022fe0a26261612fea SHA1 be5251fa1dacef5c41b74761bb1c8c54fb633b9e SHA256 1423a4fdd4a79b1728a2056d9e300f7e1074253095d82726218d9e9b953888a3
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.19 (SunOS)
+
+iEYEARECAAYFAk+5KjsACgkQX3X2B8XHTokU0wCeI/UhwClCAIGXDpYrD9UXeJFD
+9mgAoJI2J0w8oIcTzlj+ZuV3RwxnVicq
+=UmSJ
+-----END PGP SIGNATURE-----
